# rust-roguelike

./: .gitignore  README.md
client/: Cargo.toml  nginx.conf  package.json  webpack.config.js
client/src/: app.rs  armour.rs  attr_stats.rs  combat_stats.rs  contents.rs  contents_map.rs  dialog.rs  dungeon.rs  entities.rs  entity.rs  entity_map.rs  game.rs  inventory.rs  inventory_dialog.rs  level.rs  level_stats.rs  lib.rs  list.rs  list_item.rs  log.rs  logs.rs  map.rs  stats.rs  status.rs  status_map.rs  tile.rs  tile_map.rs  viewport.rs
client/src/model/: armour_model.rs  dialog_model.rs  dictionary.rs  game.rs  game_model.rs  inventory_model.rs  log_model.rs  map.rs  map_model.rs  mod.rs  stats_model.rs
client/static/: img-data.scss  index.html  style.scss  style.scss.orig  tiles.scss
common/: Cargo.toml
common/src/: consts.rs  lib.rs
server/: Cargo.toml
server/raws/: faction_table.ron  items.ron  loot_table.ron  mobs.ron  spawn_table.ron  spawns.ron  traps.ron  weapons.ron  weapons_armour.ron
server/src/: campaign.rs  change_map.rs  components.rs  damage_system.rs  desert_temple.rs  dialog.rs  dungeon.rs  dwarven_mines_gate.rs  dwarven_mines_hall.rs  gamelog.rs  gamestats.rs  inventory_system.rs  level_change.rs  main.rs  map.rs  map_indexing_system.rs  melee_combat_system.rs  monster_ai_system.rs  particles.rs  player.rs  random_table.rs  spawner.rs  tick.rs  trigger_system.rs  visibility_system.rs
server/src/ai/: adjacent_ai_system.rs  approach_ai_system.rs  default_move_system.rs  encumbrance_system.rs  flee_ai_system.rs  initiative_system.rs  mod.rs  monster_ai_system.rs  turn_status.rs  visible_ai_system.rs
server/src/maps/: dm_forge.rs  dm_gate.rs  dm_hall.rs  dm_mine.rs  dm_mountain.rs  mod.rs
server/src/raws/: mod.rs  raws.rs
server/src/spatial/: mod.rs
server/static/: index.html
