[package]
name = "roguelike-client"
version = "0.1.0"
authors = ["Tony Johnson <tony@tosp.net.au>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
specs = "0.16"
specs-derive = "0.4"
strum = "0.17"
strum_macros = "0.17"
anyhow = "1"
serde = "1"
serde_json = "1.0"
serde_repr = "0.1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = { version = "0.17", features = ["toml", "services"] }
failure = "0.1.8"
chrono = { version = "0.4", features = ["wasmbind"] }
roguelike_common = { path = "../common" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'KeyboardEvent',
  'Element',
  'HtmlCollection',
  'DomTokenList'
]
