[package]
name = "roguelike-server"
version = "0.1.0"
authors = ["Tony Johnson <tony@tosp.net.au>"]
edition = "2018"

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-web-actors = "2.0"
actix-files = "0.2"
actix-rt = "1.0"
specs = "0.16"
specs-derive = "0.4"
rltk = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"

