[package]
name = "roguelike-server"
description = "A client/server version of roguelike"
repository = "https://github.com/tnyjhnsn/rust-roguelike"
version = "0.1.0"
authors = ["Tony Johnson <tony@tosp.net.au>"]
license = "MIT"
edition = "2018"

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-web-actors = "2.0"
actix-files = "0.2"
actix-rt = "1.0"
specs = "0.16"
specs-derive = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
roguelike_common = { path = "../common" }
num-integer = "0.1"
rand = "0.7"
line_drawing = "0.8"
