[package]
name = "roguelike-server"
description = "A client/server version of roguelike"
repository = "https://github.com/tnyjhnsn/rust-roguelike"
version = "0.1.0"
authors = ["Tony Johnson <tony@tosp.net.au>"]
license = "MIT"
edition = "2018"

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-web-actors = "2.0"
actix-files = "0.2"
actix-rt = "1.0"
specs = { version = "0.16", features = ["serde"] }
specs-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
roguelike_common = { path = "../common" }
num-integer = "0.1"
rand = "0.7"
line_drawing = "0.8"
ron = "0.6"
lazy_static = "1.4.0"
